--- a/reactUno/src/index.css
+++ b/reactUno/src/index.css
@@ -26,3 +26,10 @@
   font-family: 'Courier New', Courier, monospace;
   color:hsl(60, 56%, 91%);
 }
+
+.student{
+  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: 2em;
+  padding: 10px;
+  border: 1px solid rgb(156, 156, 156);
+}
